# azc

./: .gitignore  CMakeLists.txt  bld-610.sh  bld-X86.sh  bldX64.sh  x86.sh
hello/: bld.sh  hello.c
lib/: libcrypto.so.1.1  libcurl.so.4.5.0  libgmp.so.10.3.2  libgnutls.so.30.22.0  libhogweed.so.4.4  libidn2.so.0  libnettle.so.6.4  libssl.so.1.1  libunistring.so.2.1.0  libuuid.so.1.3.0  libz.so.1
mq/: bld.sh  mq_posix  mq_posix.c  mq_sysv.c
save/: toolchain-610.cmake
sender/: bld.sh  sender.c
src/: Uploader.cpp  Uploader.h  azblob.c  azblob.h  azc.c  azc.h  hub.c  hub.h  main.c  msgq.c  msgq.h  upload.c  upload.h  watch.c  watch.h
